--- a/public/html/common/nav.html
+++ b/public/html/common/nav.html
@@ -9,7 +9,7 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="http://www.eyunhe.com.cn">
-				<img alt="Ecanal" src="/images/tubiao.jpg">
+				<img alt="Ecanal" src="/images/tubiao.png">
 			</a>
 		</div>
 
